[tool.poetry]
name = "testpackage"
version = "0.1.0"
description = "Test"
authors = ["Test Test <test@test.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
assertpy = "*"
allure-pytest = "*"
dict2xml = "*"
jsonschema = "*"
pytest = "*"
pytest-sugar = "*"
pytest-html = "*"
pytest-xdist = "*"
requests = "*"
retrying = "*"
toml = "*"
xmltodict = "*"

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
