[tool.poetry]
name = "testpackage"
version = "0.1.0"
description = "Test"
authors = ["Test Test <test@test.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "poetry_demo" }]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "*"
xmltodict = "*"

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
